--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.3.6",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.13",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuex": "^4.0.2"
@@ -25,6 +27,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
