--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "vue": "^2.6.14",
+    "vue-json-excel": "^0.3.0",
     "vue-router": "^3.5.3",
     "vuex": "^4.0.2"
   },
